// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductPrice /> should pick the correct class when rendered as a column 1`] = `
<ProductPrice
  price={
    Object {
      "currency": "EUR",
      "discount": 0,
      "info": "",
      "msrp": 0,
      "unitPrice": 5,
      "unitPriceMin": 0,
      "unitPriceStriked": 0,
    }
  }
  renderLine={false}
>
  <Portal
    name="grouped-product.price.before"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  />
  <Portal
    name="grouped-product.price"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  >
    <div
      className="css-nil"
    >
      <Price
        className="css-fisw11"
        currency="EUR"
        discounted={false}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={5}
        unitPriceMin={0}
      >
        <div
          className="css-izofhs css-fisw11"
          data-test-id="minPrice: 0 price: 5 currency: EUR"
        >
          <FormatPrice
            className=""
            currency="EUR"
            fractions={true}
            price={5}
          >
            <span
              className=""
            >
              5
            </span>
          </FormatPrice>
        </div>
      </Price>
    </div>
  </Portal>
  <Portal
    name="grouped-product.price.after"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  />
</ProductPrice>
`;

exports[`<ProductPrice /> should pick the correct class when rendered as a line 1`] = `
<ProductPrice
  price={
    Object {
      "currency": "EUR",
      "discount": 0,
      "info": "",
      "msrp": 0,
      "unitPrice": 5,
      "unitPriceMin": 0,
      "unitPriceStriked": 0,
    }
  }
  renderLine={true}
>
  <Portal
    name="grouped-product.price.before"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": true,
      }
    }
  />
  <Portal
    name="grouped-product.price"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": true,
      }
    }
  >
    <div
      className="css-1yymqrw"
    >
      <Price
        className="css-fisw11"
        currency="EUR"
        discounted={false}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={5}
        unitPriceMin={0}
      >
        <div
          className="css-izofhs css-fisw11"
          data-test-id="minPrice: 0 price: 5 currency: EUR"
        >
          <FormatPrice
            className=""
            currency="EUR"
            fractions={true}
            price={5}
          >
            <span
              className=""
            >
              5
            </span>
          </FormatPrice>
        </div>
      </Price>
    </div>
  </Portal>
  <Portal
    name="grouped-product.price.after"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": true,
      }
    }
  />
</ProductPrice>
`;

exports[`<ProductPrice /> should render a regualar price as expected 1`] = `
<ProductPrice
  price={
    Object {
      "currency": "EUR",
      "discount": 0,
      "info": "",
      "msrp": 0,
      "unitPrice": 5,
      "unitPriceMin": 0,
      "unitPriceStriked": 0,
    }
  }
  renderLine={false}
>
  <Portal
    name="grouped-product.price.before"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  />
  <Portal
    name="grouped-product.price"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  >
    <div
      className="css-nil"
    >
      <Price
        className="css-fisw11"
        currency="EUR"
        discounted={false}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={5}
        unitPriceMin={0}
      >
        <div
          className="css-izofhs css-fisw11"
          data-test-id="minPrice: 0 price: 5 currency: EUR"
        >
          <FormatPrice
            className=""
            currency="EUR"
            fractions={true}
            price={5}
          >
            <span
              className=""
            >
              5
            </span>
          </FormatPrice>
        </div>
      </Price>
    </div>
  </Portal>
  <Portal
    name="grouped-product.price.after"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 0,
          "info": "",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  />
</ProductPrice>
`;

exports[`<ProductPrice /> should render a strike price discounted price as expected 1`] = `
<ProductPrice
  price={
    Object {
      "currency": "EUR",
      "discount": 50,
      "info": "5 EUR / kg",
      "msrp": 0,
      "unitPrice": 5,
      "unitPriceMin": 0,
      "unitPriceStriked": 10,
    }
  }
  renderLine={false}
>
  <Portal
    name="grouped-product.price.before"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "5 EUR / kg",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 10,
        },
        "renderLine": false,
      }
    }
  />
  <Portal
    name="grouped-product.price"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "5 EUR / kg",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 10,
        },
        "renderLine": false,
      }
    }
  >
    <div
      className="css-nil"
    >
      <PriceStriked
        className="css-117ocmm"
        currency="EUR"
        value={10}
      >
        <div
          className="css-1sagvrb css-117ocmm "
        >
          <span
            data-test-id="strikedPrice: 10"
          >
            <FormatPrice
              className=""
              currency="EUR"
              fractions={true}
              price={10}
            >
              <span
                className=""
              >
                10
              </span>
            </FormatPrice>
          </span>
        </div>
      </PriceStriked>
      <Price
        className="css-fisw11"
        currency="EUR"
        discounted={true}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={5}
        unitPriceMin={0}
      >
        <div
          className="css-izofhs css-fisw11 css-1ncyhu"
          data-test-id="minPrice: 0 price: 5 currency: EUR"
        >
          <FormatPrice
            className=""
            currency="EUR"
            fractions={true}
            price={5}
          >
            <span
              className=""
            >
              5
            </span>
          </FormatPrice>
        </div>
      </Price>
    </div>
    <PriceInfo
      className="css-7hzrhp"
      text="5 EUR / kg"
    >
      <div
        className="css-1kqiarg css-7hzrhp"
        dangerouslySetInnerHTML={
          Object {
            "__html": "5 EUR / kg",
          }
        }
        data-test-id="priceInfo: 5 EUR / kg"
      />
    </PriceInfo>
  </Portal>
  <Portal
    name="grouped-product.price.after"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "5 EUR / kg",
          "msrp": 0,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 10,
        },
        "renderLine": false,
      }
    }
  />
</ProductPrice>
`;

exports[`<ProductPrice /> should render an msrp discounted price as expected 1`] = `
<ProductPrice
  price={
    Object {
      "currency": "EUR",
      "discount": 50,
      "info": "",
      "msrp": 10,
      "unitPrice": 5,
      "unitPriceMin": 0,
      "unitPriceStriked": 0,
    }
  }
  renderLine={false}
>
  <Portal
    name="grouped-product.price.before"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "",
          "msrp": 10,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  />
  <Portal
    name="grouped-product.price"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "",
          "msrp": 10,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  >
    <div
      className="css-nil"
    >
      <div
        className="css-1en8fmq"
      >
        <Translate
          className="css-14aq3ya"
          params={Object {}}
          string="price.msrp"
        >
          <span
            className="css-14aq3ya"
          >
            price.msrp
          </span>
        </Translate>
        <PriceStriked
          className="css-117ocmm"
          currency="EUR"
          value={10}
        >
          <div
            className="css-1sagvrb css-117ocmm "
          >
            <span
              data-test-id="strikedPrice: 10"
            >
              <FormatPrice
                className=""
                currency="EUR"
                fractions={true}
                price={10}
              >
                <span
                  className=""
                >
                  10
                </span>
              </FormatPrice>
            </span>
          </div>
        </PriceStriked>
      </div>
      <Price
        className="css-fisw11"
        currency="EUR"
        discounted={true}
        fractions={true}
        taxDisclaimer={false}
        unitPrice={5}
        unitPriceMin={0}
      >
        <div
          className="css-izofhs css-fisw11 css-1ncyhu"
          data-test-id="minPrice: 0 price: 5 currency: EUR"
        >
          <FormatPrice
            className=""
            currency="EUR"
            fractions={true}
            price={5}
          >
            <span
              className=""
            >
              5
            </span>
          </FormatPrice>
        </div>
      </Price>
    </div>
  </Portal>
  <Portal
    name="grouped-product.price.after"
    props={
      Object {
        "price": Object {
          "currency": "EUR",
          "discount": 50,
          "info": "",
          "msrp": 10,
          "unitPrice": 5,
          "unitPriceMin": 0,
          "unitPriceStriked": 0,
        },
        "renderLine": false,
      }
    }
  />
</ProductPrice>
`;
